--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.48MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.97MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.52MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇨🇳 中国-4.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-6.00MB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇨🇳 台湾-1.46MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.63MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.97MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-206.4KB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 520faa7a-e763-457d-ab9a-de4b6607df77, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.54MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇯🇵 日本-243.5KB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.44MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-2.01MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.13MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.70MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.86MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-243.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-243.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-243.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.46MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-243.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-243.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-243.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-243.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.13MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.70MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
